--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test": "vitest",
 		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"encrypt": "cryptify encrypt .env.local -p $SECRET",
+		"decrypt": "cryptify decrypt .env.local -p $SECRET"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.0.0",
@@ -22,6 +24,7 @@
 		"@types/eslint": "^9.6.0",
 		"@types/google.maps": "^3.55.12",
 		"autoprefixer": "^10.4.19",
+		"cryptify": "^4.1.2",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
