update: get current place info

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 VITE_CRYPITIFY_SECRET="Jjackde@159753"
 VITE_GOOGLE_MAPS_API_KEY="AIzaSyDs5K8i-TTitCIff7gxQP79PTnYPLI_BP8"
-VITE_GCP_MAP_ID="40bf35dd549bb21f"
+VITE_GOOGLE_MAPS_ID="DEMO_MAP_ID"
+# VITE_GOOGLE_MAPS_ID="40bf35dd549bb21f"
